feature: add kafka schema registry